--- a/buildinfolib/build.gradle
+++ b/buildinfolib/build.gradle
@@ -27,10 +27,8 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-
     implementation 'com.android.support:appcompat-v7:28.0.0'
-    inject 'com.airbnb.android:lottie:3.0.6'
-
+    inject 'com.github.jeevan-sukshi:ReflectionDemoLib:1.1'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
@@ -38,6 +36,6 @@ dependencies {
 injectConfig {
     enabled = true
     groups = [
-            "lottie": ["com.airbnb.android"]
+            "reflectiondemo": ["com.sukshi.buildinfolib"]
     ]
 }
