--- a/buildinfolib/build.gradle
+++ b/buildinfolib/build.gradle
@@ -17,10 +17,22 @@ android {
     }
 
     buildTypes {
+
         release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            buildConfigField 'String', "SomeURL", SomeURL
+
+            minifyEnabled true
+            consumerProguardFiles 'proguard-rules.pro'
+            // proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
+        debug {
+            buildConfigField 'String', "SomeURL", SomeURL
+
+            minifyEnabled true
+            consumerProguardFiles 'proguard-rules.pro'
+            // proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        }
+
     }
 
 }
